syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/sparhokm/go-course-ms-auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create(CreateIn) returns (CreateOut);
  rpc Get(GetIn) returns (GetOut);
  rpc Update(UpdateIn) returns (google.protobuf.Empty);
  rpc Delete(DeleteIn) returns (google.protobuf.Empty);
}

message CreateIn {
  UserInfo userInfo = 1;
  NewPassword password = 2;
}

message CreateOut {
  int64 id = 1;
}

message GetIn {
  int64 id = 1;
}

message GetOut {
  int64 id = 1;
  UserInfo userInfo = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UserInfo {
  string name = 1;
  string email = 2;
  Role role = 3;
}

message UpdateIn {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  optional Role role = 4;
}

message DeleteIn {
  int64 id = 1;
}

message NewPassword {
  string password = 1;
  string confirm = 2;
}

enum Role {
  USER = 0;
  ADMIN = 1;
}
